Rename main scss file

--- a/templates/base_index.html
+++ b/templates/base_index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr" itemscope itemtype="http://schema.org/Product">
   <head>
     <title itemprop="name">MAAS {% block page-title %}{% endblock %}</title>
-    {% include "includes/head.html" with css_file="css/main.css" %}
+    {% include "includes/head.html" with css_file="css/styles.css" %}
   </head>
   <body class="{% block page_class %}{% endblock %}">
     {% include "includes/tag_manager.html" %}
